Revert parasol-insurance-dev cluster to non aws-gpu

--- a/components/argocd/apps/overlays/parasol-insurance-dev/kustomization.yaml
+++ b/components/argocd/apps/overlays/parasol-insurance-dev/kustomization.yaml
@@ -21,3 +21,7 @@ patches:
     target:
       kind: ApplicationSet
       name: tenants
+  - path: patch-tenants-applicationset.yaml
+    target:
+      kind: ApplicationSet
+      name: tenants
